2023-11-10T01:00:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6819361487 # 1345
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-10
* notice: last 14d: unq all: 5 4137
* notice: prev accum: outdated-unq outdated-all / unq all: 1814 173382 / 1853 177800
* notice: next accum: outdated-unq outdated-all / unq all: 1817 173683 / 1853 177896
* notice: prev exec diff / last date diff / accum: unq all: +0 +96 -0 -76 / +2 +300 -0 -0 / 2 300
* notice: removed / changed dates: [2023-10-26] / [2023-10-27 2023-11-09]

2023-11-09T16:17:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6814504642 # 1344
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-09
* notice: last 14d: unq all: 5 4157
* notice: prev accum: outdated-unq outdated-all / unq all: 1814 173382 / 1853 177708
* notice: next accum: outdated-unq outdated-all / unq all: 1814 173382 / 1853 177800
* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -1 -93 / +2 +204 -0 -0 / 2 204
* notice: removed / changed dates: [] / [2023-10-26 2023-11-09]

2023-11-09T08:16:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6809100386 # 1343
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-09
* notice: last 14d: unq all: 5 4158
* notice: prev accum: outdated-unq outdated-all / unq all: 1814 173382 / 1851 177596
* notice: next accum: outdated-unq outdated-all / unq all: 1814 173382 / 1853 177708
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -1 -92 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2023-10-26 2023-11-09]

2023-11-09T01:00:08Z: