@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-11-10T01:00:06Z",
+  "timestamp" : "2023-11-10T08:16:32Z",
   "count_outdated" : 173683,
   "uniques_outdated" : 1817,
-  "count" : 177896,
-  "uniques" : 1853,
+  "count" : 178008,
+  "uniques" : 1855,
   "clones" : [
     {
       "timestamp": "2023-10-27T00:00:00Z",
-      "count": 224,
+      "count": 133,
       "count_minmax": [ 112, 300 ],
-      "count_decinc": [ 76, 300 ],
+      "count_decinc": [ 167, 300 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -127,6 +127,15 @@
       "count": 300,
       "count_minmax": [ 112, 300 ],
       "count_decinc": [ 0, 300 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-11-10T00:00:00Z",
+      "count": 112,
+      "count_minmax": [ 112, 112 ],
+      "count_decinc": [ 0, 112 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
