@@ -1,10 +1,10 @@
 {
-  "count": 4137,
+  "count": 4158,
   "uniques": 5,
   "clones": [
     {
       "timestamp": "2023-10-27T00:00:00Z",
-      "count": 224,
+      "count": 133,
       "uniques": 2
     },
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2023-11-09T00:00:00Z",
       "count": 300,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2023-11-10T00:00:00Z",
+      "count": 112,
       "uniques": 2
     }
   ]
