@@ -1,3 +1,12 @@
+2023-11-10T08:16:32Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6822357792 # 1346
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-10
+* notice: last 14d: unq all: 5 4158
+* notice: prev accum: outdated-unq outdated-all / unq all: 1817 173683 / 1853 177896
+* notice: next accum: outdated-unq outdated-all / unq all: 1817 173683 / 1855 178008
+* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -91 / +2 +112 -0 -0 / 2 112
+* notice: removed / changed dates: [] / [2023-10-27 2023-11-10]
+
 2023-11-10T01:00:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6819361487 # 1345
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-10
